[gd_scene load_steps=3 format=3 uid="uid://bokmyryh1grhn"]

[ext_resource type="Theme" uid="uid://dh11dhy14m5xb" path="res://fonts/reload_button_theme.tres" id="1_7wna4"]
[ext_resource type="Script" path="res://scenes/loadPanel/load_panel.gd" id="1_g8qxp"]

[node name="load_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8qxp")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1080, 80)
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "LOAD PANEL"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DataPathLineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(950, 80)
layout_mode = 2

[node name="DownloadButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme = ExtResource("1_7wna4")

[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/DownloadButton" to="." method="_on_download_button_pressed"]
